<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2012-2016 Tobias Brunner
    Copyright (C) 2012 Giuliano Grassi
    Copyright (C) 2012 Ralf Sager
    HSR Hochschule fuer Technik Rapperswil

    This program is free software; you can redistribute it and/or modify it
    under the terms of the GNU General Public License as published by the
    Free Software Foundation; either version 2 of the License, or (at your
    option) any later version.  See <http://www.fsf.org/copyleft/gpl.txt>.

    This program is distributed in the hope that it will be useful, but
    WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
    or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
    for more details.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true" >

    <LinearLayout
        android:id="@+id/vpn_error"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/error_background"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/vpn_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            android:text="Failed to establish VPN: Server is unreachable"
            android:textColor="@color/primary_dark"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:gravity="end" >

            <Button
                android:id="@+id/show_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/show_log"
                android:textColor="@color/primary"
                android:textSize="14sp"
                android:textStyle="bold"
                style="?android:attr/borderlessButtonStyle" >
            </Button>

            <Button
                android:id="@+id/retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retry"
                android:textColor="@color/primary"
                android:textSize="14sp"
                android:textStyle="bold"
                style="?android:attr/borderlessButtonStyle" >
            </Button>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@drawable/state_background"
                  android:orientation="vertical" >

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:columnCount="2"
            android:rowCount="2" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="top"
                android:text="@string/state_label"
                android:textColor="?android:textColorPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/vpn_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:text="@string/state_disabled"
                android:textColor="?android:textColorSecondary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/vpn_profile_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="top"
                android:text="@string/profile_label"
                android:textColor="?android:textColorPrimary"
                android:textSize="20sp"
                android:visibility="gone" >
            </TextView>

            <TextView
                android:id="@+id/vpn_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:textSize="20sp"
                android:visibility="gone" >
            </TextView>
        </GridLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:indeterminate="true"
            android:visibility="gone"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal" />

        <Button
            android:id="@+id/action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/disconnect"
            style="?android:attr/borderlessButtonStyle" >
        </Button>

    </LinearLayout>
</LinearLayout>
